[package]
name = "randr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
anyrun-plugin = "0.1.0"
abi_stable = "0.11.3"
hyprland = "0.4.0-alpha.2"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
